--- a/Homework/week-6/map.css
+++ b/Homework/week-6/map.css
@@ -6,7 +6,7 @@ body {text-align: center; font-family: verdana; font-size: 12px}
 
 h1 {color: grey; text-align:center; font-family: verdana}
 
-h2 {color: silver; text-align:center; font-family: verdana}
+h2 {color: dark-grey; text-align:center; font-family: verdana; font-size: 15px}
 
 p {text-align: center; font-family: verdana; font-size: 12px}
 
@@ -18,6 +18,10 @@ li {text-align: left}
 
 #container {width: 1053px; position: relative; height: 800px; margin: auto}
 
-#extra_text {padding-top: 40px; align: center; width: 750px; margin: auto}
+#extra_text {padding-top: 50px; align: center; width: 750px; margin: auto}
 
 .tooltip { position: absolute; width: 150px; height: 28px; pointer-events: none; text-align: left}
+
+.bg-4 { background-color: #2f2f2f; color: #fff; bottom: 0; width: 100%; padding-top: 10px}
+
+.storytelling {width: 700px; margin: auto}
